k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextech-ingress
  annotations:
    cert-manager.io/issuer: "nextech-letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      chunked_transfer_encoding off;
      proxy_cache off;
spec:
  ingressClassName: nginx
  rules:
    # make sure to provide the host here as well
    # ref: https://github.com/kubernetes/ingress-nginx/issues/7153#issuecomment-1813788678
    - host: www.nextech-ai-asst.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backendsvc
                port:
                  number: 80
  tls:
    - hosts:
        - www.nextech-ai-asst.com
      secretName: nextech-letsencrypt-tls
